--- a/Apps/Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Apps/Android/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,9 @@
         android:name="fr.reivaxy.kinetix.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first"/>
+    <fragment
+        android:id="@+id/preferenceFragment"
+        android:name="fr.reivaxy.kinetix.PreferenceFragment"
+        android:label="PreferenceFragment"
+        tools:layout="@layout/preferences"/>
 </navigation>
