Now handling preferences to set up the Mac Address (no bluetooth device list for now)

--- a/Apps/Android/app/src/main/res/layout/activity_main.xml
+++ b/Apps/Android/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/content_main"
+    <include layout="@layout/content_main"
 
         />
 
