--- a/Apps/Android/app/src/main/res/menu/menu_main.xml
+++ b/Apps/Android/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,14 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_tools"
+        android:orderInCategory="100"
+        android:title="@string/tools"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
+        app:showAsAction="never" />
 </menu>
