--- a/Apps/Android/app/src/main/res/values/arrays.xml
+++ b/Apps/Android/app/src/main/res/values/arrays.xml
@@ -1,12 +1,14 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+    <string-array name="buttonsPosition_entries">
+        <item>@string/left</item>
+        <item>@string/center</item>
+        <item>@string/right</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="buttonsPosition_values">
+        <item>left</item>
+        <item>center</item>
+        <item>right</item>
     </string-array>
 </resources>
