--- a/Apps/Android/app/src/main/res/xml/root_preferences.xml
+++ b/Apps/Android/app/src/main/res/xml/root_preferences.xml
@@ -16,7 +16,9 @@
         <SwitchPreference
             android:defaultValue="false"
             android:key="voiceControl"
-            android:title="@string/voiceControl" />
+            android:title="@string/voiceControl"
+            android:summary="@string/buttonPositionSummary">
+        </SwitchPreference>
 
         <ListPreference
             app:defaultValue="center"
