Added "Safe Filter" in preferences

--- a/Apps/Android/app/src/main/res/xml/root_preferences.xml
+++ b/Apps/Android/app/src/main/res/xml/root_preferences.xml
@@ -20,6 +20,12 @@
             android:summary="@string/buttonPositionSummary">
         </SwitchPreference>
 
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="safeFilter"
+            android:title="@string/safeFilter">
+        </SwitchPreference>
+
         <ListPreference
             app:defaultValue="center"
             app:entries="@array/buttonsPosition_entries"
